add linear attribution
